--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     }
 
     ratingContainer.addEventListener('mouseover', (event) => {
+      console.log('Mouseover event:', event.target);
       if (event.target.tagName === 'SPAN') {
         const value = event.target.dataset.value;
         updateStars(value);
@@ -92,12 +93,15 @@
     });
 
     ratingContainer.addEventListener('mouseout', () => {
+      console.log('Mouseout event');
       updateStars(selectedValue);
     });
 
-    stars.forEach(star => {
-      star.addEventListener('click', () => {
-        selectedValue = parseInt(star.dataset.value);
+    ratingContainer.addEventListener('click', (event) => {
+      console.log('Click event:', event.target);
+      if (event.target.tagName === 'SPAN') {
+        selectedValue = parseInt(event.target.dataset.value);
+        console.log('Selected value:', selectedValue);
         updateStars(selectedValue);
 
         document.getElementById('resenaBtn').classList.add('hidden');
@@ -108,7 +112,7 @@
         } else {
           document.getElementById('formulario').classList.remove('hidden');
         }
-      });
+      }
     });
 
     function goToReview() {
