--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   </div>
 
   <script>
+    console.log('Script loaded');
     const stars = document.querySelectorAll('.stars span');
     const ratingContainer = document.getElementById('rating');
     let selectedValue = 0;
