--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
       }
     });
 
+    // Set initial state
+    updateStars(selectedValue);
+
     function goToReview() {
       // Reemplaza con tu URL real de reseñas
       window.location.href = "https://search.google.com/local/writereview?placeid=TU_PLACE_ID";
