--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   </div>
 
   <div id="codigoContainer" class="hidden" style="margin-top: 1rem;">
-    <p>Tu código de recompensa es: <strong id="codigoRecompensa"></strong></p>
+    <p>Código de recompensa / Reward code: <strong id="codigoRecompensa"></strong></p>
+    <p>Finaliza tu reseña para poder canjearlo</p>
   </div>
   
   <div id="formulario" class="hidden">
