--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       --star-inactive-color: #ccc;
       --success-bg: #d4edda;
       --success-text: #155724;
+      --container-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -21,25 +22,37 @@
       background-color: var(--background-color);
       color: var(--text-color);
       line-height: 1.6;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
     }
     .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 1rem;
+      max-width: 90%;
+      width: 500px;
+      margin: 1rem;
+      padding: 2rem;
+      background-color: white;
+      border-radius: 15px;
+      box-shadow: var(--container-shadow);
     }
     h2 {
       color: var(--primary-color);
       font-size: 1.8rem;
+      margin-bottom: 0.5rem;
     }
     p {
       font-size: 1.1rem;
+      margin-bottom: 1.5rem;
     }
     .stars {
-      font-size: 2.5rem;
+      font-size: 3rem;
       cursor: pointer;
+      margin-bottom: 1.5rem;
     }
     .stars span {
-      padding: 0 0.25rem;
+      padding: 0 0.3rem;
       color: var(--star-inactive-color);
       transition: color 0.2s ease, transform 0.2s ease;
     }
@@ -53,7 +66,6 @@
       display: block;
       margin: 1rem auto;
       width: 100%;
-      max-width: 500px;
       padding: 0.8rem;
       font-size: 1rem;
       border: 1px solid #ccc;
@@ -64,26 +76,34 @@
       display: inline-block;
       background-color: var(--success-bg);
       color: var(--success-text);
-      padding: 0.4rem 0.8rem;
+      padding: 0.5rem 1rem;
       border-radius: 8px;
       font-weight: bold;
+      font-size: 1.2rem;
     }
     button {
       background-color: var(--primary-color);
       color: white;
       border: none;
-      padding: 0.8rem 1.8rem;
+      padding: 0.9rem 2rem;
       font-size: 1.1rem;
       cursor: pointer;
       border-radius: 8px;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      width: 100%;
+      max-width: 300px;
     }
     button:hover {
       background-color: #e67e22;
+      transform: translateY(-2px);
+    }
+    #valorarBtnContainer, #codigoContainer, #formulario, #resenaBtn {
+      margin-top: 2rem;
     }
     @media (max-width: 600px) {
-      body {
-        padding: 1rem;
+      .container {
+        padding: 1.5rem;
+        margin: 0.5rem;
       }
       h2 {
         font-size: 1.5rem;
@@ -92,10 +112,10 @@
         font-size: 1rem;
       }
       .stars {
-        font-size: 2rem;
+        font-size: 2.5rem;
       }
       button {
-        padding: 0.7rem 1.5rem;
+        padding: 0.8rem 1.5rem;
         font-size: 1rem;
       }
     }
