--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <div class="language-selector">
       <div class="language-dropdown" id="languageDropdown">
         <button class="language-btn" id="languageBtn">
-          <span class="flag" id="currentFlag">🇪🇸</span>
+          <span class="flag" id="currentFlag"></span>
           <span id="currentLang">ES</span>
           <span class="arrow">▼</span>
         </button>
         <div class="language-options" id="languageOptions">
           <div class="language-option active" data-lang="es">
-            <span class="flag">🇪🇸</span>
+            <span class="flag"></span>
             <span>Español</span>
           </div>
           <div class="language-option" data-lang="en">
-            <span class="flag">🇬🇧</span>
+            <span class="flag"></span>
             <span>English</span>
           </div>
           <div class="language-option" data-lang="de">
-            <span class="flag">🇩🇪</span>
+            <span class="flag"></span>
             <span>Deutsch</span>
           </div>
           <div class="language-option" data-lang="fr">
-            <span class="flag">🇫🇷</span>
+            <span class="flag"></span>
             <span>Français</span>
           </div>
         </div>
