--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="form-group">
             <input type="email" class="form-input" data-placeholder="emailPlaceholder" required>
           </div>
-          <div class="form-group">
+          <div class="form-group" id="feedback-group">
             <textarea class="form-input form-textarea" data-placeholder="feedbackPlaceholder" required></textarea>
           </div>
           <button type="submit" class="submit-btn">
