--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="header">
       <h1><span class="emoji">🎁</span> <span data-text="title">¡Elige tu sorpresa!</span></h1>
-      <p class="subtitle"><span data-text="subtitle">Antes, por favor valora tu experiencia con nosotros</span></p>
+      <p class="subtitle"><span data-text="subtitle">Antes de tu sorpresa, ¿qué tal fue tu experiencia? Ayúdanos a mejorar valorando con las estrellas.</span></p>
     </div>
 
     <div class="rating-section">
@@ -53,7 +53,7 @@
 
       <div id="valorarBtnContainer" class="hidden">
         <button class="confirmation-btn" id="valorarBtn">
-          <span id="btnText" data-text="confirmRating">Confirmar valoración</span>
+          <span id="btnText"></span>
         </button>
       </div>
     </div>
@@ -82,7 +82,7 @@
             <textarea class="form-input form-textarea" data-placeholder="feedbackPlaceholder" required></textarea>
           </div>
           <button type="submit" class="submit-btn">
-            <span id="submitText" data-text="submitBtn">Enviar</span>
+            <span id="submitText"></span>
           </button>
         </form>
       </div>
