--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tu Sorpresa | Restaurante Pizzería Euro</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="roulette.css">
 </head>
 <body>
   <div class="container">
@@ -99,6 +100,14 @@
     </div>
   </div>
 
+  <!-- Roulette -->
+  <div id="rouletteContainer" class="roulette-container">
+    <div class="roulette-pointer"></div>
+    <div id="rouletteWheel" class="roulette-wheel"></div>
+    <button id="spinBtn" class="confirmation-btn">Girar la ruleta</button>
+  </div>
+
   <script src="main.js" defer></script>
+  <script src="roulette.js" defer></script>
 </body>
 </html>
