--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
   <!-- Roulette -->
   <div id="rouletteContainer" class="roulette-container">
     <div class="roulette-pointer"></div>
-    <div id="rouletteWheel" class="roulette-wheel"></div>
+    <div id="rouletteWheel" class="roulette-wheel">
+      <div id="rouletteColorLayer" class="roulette-layer"></div>
+      <div id="rouletteTextLayer" class="roulette-layer"></div>
+    </div>
     <button id="spinBtn" class="confirmation-btn">Girar la ruleta</button>
   </div>
 
