--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
   <!-- Roulette -->
-  <div id="rouletteContainer" class="roulette-container">
+  <div id="rouletteContainer" class="roulette-container hidden">
     <div class="roulette-pointer"></div>
     <div id="rouletteWheel" class="roulette-wheel">
       <div id="rouletteColorLayer" class="roulette-layer"></div>
