--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div id="rouletteColorLayer" class="roulette-layer"></div>
       <div id="rouletteTextLayer" class="roulette-layer"></div>
     </div>
-    <button id="spinBtn" class="confirmation-btn">Girar la ruleta</button>
+    <button id="spinBtn" class="confirmation-btn" data-text="spinBtn">Girar la ruleta</button>
   </div>
 
   <script src="main.js" defer></script>
