--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="roulette.css">
 </head>
 <body>
+<div class="main-wrapper">
   <div class="container">
     <!-- Language Selector -->
     <div class="language-selector">
@@ -107,8 +108,9 @@
       <div id="rouletteColorLayer" class="roulette-layer"></div>
       <div id="rouletteTextLayer" class="roulette-layer"></div>
     </div>
-    <button id="spinBtn" class="confirmation-btn" data-text="spinBtn">Girar la ruleta</button>
+    <button id="spinBtn" class="confirmation-btn"></button>
   </div>
+</div>
 
   <script src="main.js" defer></script>
   <script src="roulette.js" defer></script>
