--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="header">
-      <h1><span class="emoji">🎁</span> <span data-text="title">¡Elige tu sorpresa!</span></h1>
+      <h1><span class="emoji">🎁</span> <span data-text="title">¡Tu opinión tiene premio!</span></h1>
       <p class="subtitle"><span data-text="subtitle">Antes de tu sorpresa, ¿qué tal fue tu experiencia? Ayúdanos a mejorar valorando con las estrellas.</span></p>
     </div>
 
@@ -101,14 +101,19 @@
     </div>
   </div>
 
-  <!-- Roulette -->
-  <div id="rouletteContainer" class="roulette-container hidden">
-    <div class="roulette-pointer"></div>
-    <div id="rouletteWheel" class="roulette-wheel">
-      <div id="rouletteColorLayer" class="roulette-layer"></div>
-      <div id="rouletteTextLayer" class="roulette-layer"></div>
+  <div class="roulette-screen hidden">
+    <div class="header">
+      <h1><span class="emoji">🎁</span> <span data-text="rouletteTitle">¡Gira y gana!</span></h1>
+      <p class="subtitle"><span data-text="rouletteSubtitle">¡Tu suerte está en juego!</span></p>
     </div>
-    <button id="spinBtn" class="confirmation-btn"></button>
+    <div id="rouletteContainer">
+      <div class="roulette-pointer"></div>
+      <div id="rouletteWheel" class="roulette-wheel">
+        <div id="rouletteColorLayer" class="roulette-layer"></div>
+        <div id="rouletteTextLayer" class="roulette-layer"></div>
+      </div>
+      <button id="spinBtn" class="confirmation-btn"></button>
+    </div>
   </div>
 </div>
 
