--- a/index.html
+++ b/index.html
@@ -101,19 +101,13 @@
     </div>
   </div>
 
-  <div class="roulette-screen hidden">
-    <div class="header">
-      <h1><span class="emoji">🎁</span> <span data-text="rouletteTitle">¡Gira y gana!</span></h1>
-      <p class="subtitle"><span data-text="rouletteSubtitle">¡Tu suerte está en juego!</span></p>
+  <div id="rouletteContainer" class="roulette-container hidden">
+    <div class="roulette-pointer"></div>
+    <div id="rouletteWheel" class="roulette-wheel">
+      <div id="rouletteColorLayer" class="roulette-layer"></div>
+      <div id="rouletteTextLayer" class="roulette-layer"></div>
     </div>
-    <div id="rouletteContainer">
-      <div class="roulette-pointer"></div>
-      <div id="rouletteWheel" class="roulette-wheel">
-        <div id="rouletteColorLayer" class="roulette-layer"></div>
-        <div id="rouletteTextLayer" class="roulette-layer"></div>
-      </div>
-      <button id="spinBtn" class="confirmation-btn"></button>
-    </div>
+    <button id="spinBtn" class="confirmation-btn"></button>
   </div>
 </div>
 
