--- a/index.html
+++ b/index.html
@@ -101,13 +101,19 @@
     </div>
   </div>
 
-  <div id="rouletteContainer" class="roulette-container hidden">
-    <div class="roulette-pointer"></div>
-    <div id="rouletteWheel" class="roulette-wheel">
-      <div id="rouletteColorLayer" class="roulette-layer"></div>
-      <div id="rouletteTextLayer" class="roulette-layer"></div>
+  <div class="roulette-screen hidden">
+    <div class="header">
+      <h1><span class="emoji">🎁</span> <span data-text="rouletteTitle">¡A por tu premio!</span></h1>
+      <p class="subtitle"><span data-text="rouletteSubtitle">Gira la ruleta para descubrir tu recompensa.</span></p>
     </div>
-    <button id="spinBtn" class="confirmation-btn"></button>
+    <div id="rouletteContainer">
+      <div class="roulette-pointer"></div>
+      <div id="rouletteWheel" class="roulette-wheel">
+        <div id="rouletteColorLayer" class="roulette-layer"></div>
+        <div id="rouletteTextLayer" class="roulette-layer"></div>
+      </div>
+      <button id="spinBtn" class="confirmation-btn"></button>
+    </div>
   </div>
 </div>
 
