--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
   </div>
 </div>
 
-  <script src="main.js" defer></script>
-  <script src="roulette.js" defer></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
