--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       </div>
     </div>
 
+    <div class="restaurant-title">
+      <h2>Restaurante Pizzería Euro</h2>
+    </div>
+
     <div class="header">
       <h1><span class="emoji">🎁</span> <span data-text="title">¡Tu opinión tiene premio!</span></h1>
       <p class="subtitle"><span data-text="subtitle">Antes de tu sorpresa, ¿qué tal fue tu experiencia? Ayúdanos a mejorar valorando con las estrellas.</span></p>
