--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="big-prizes-preview">
         <div class="prize-preview-item">
           <span class="prize-icon">🍽️</span>
-          <span class="prize-text">CENA GRATIS</span>
+          <span class="prize-text">CENA GRATIS PARA 2</span>
         </div>
         <div class="prize-preview-item">
           <span class="prize-icon">💰</span>
@@ -88,7 +88,7 @@
     </div>
 
     <div class="rating-section">
-      <p class="rating-instruction">¿Qué tal ha sido tu experiencia VIP?</p>
+      <p class="rating-instruction">¿Qué tal ha sido tu experiencia?</p>
       <div class="stars" id="rating">
         <span class="star" data-value="1">★</span>
         <span class="star" data-value="2">★</span>
