--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <!-- Notificaciones de ganadores (fake social proof) -->
   <div class="winner-notifications" id="winnerNotifications"></div>
 
-  <div class="restaurant-title">
-    <h2>Restaurante Pizzería Euro</h2>
-    <div class="vip-badge">👑 ZONA VIP - PREMIOS EXCLUSIVOS 👑</div>
-  </div>
+    <div class="restaurant-title">
+      <h2>Restaurante Pizzería Euro</h2>
+      <div class="vip-badge" data-text="vipBadge">👑 ZONA VIP - PREMIOS EXCLUSIVOS 👑</div>
+    </div>
   
   <div class="container">
     <!-- Language Selector (más pequeño) -->
@@ -67,7 +67,7 @@
     </div>
 
     <div class="header">
-      <h1 class="pulse-title"><span class="emoji">🎉</span> <span data-text="title">¡FELICIDADES! Has sido SELECCIONADO</span></h1>
+      <h1 class="pulse-title"><span data-text="title">¡FELICIDADES! Has sido SELECCIONADO</span></h1>
       <p class="subtitle urgent-flash"><span data-text="subtitle">⚡ Tienes 3 MINUTOS para reclamar tu PREMIO EXCLUSIVO ⚡</span></p>
       
       <!-- Preview de premios grandes -->
@@ -88,7 +88,7 @@
     </div>
 
     <div class="rating-section">
-      <p class="rating-instruction">¿Qué tal ha sido tu experiencia?</p>
+      <p class="rating-instruction" data-text="ratingInstruction">¿Qué tal ha sido tu experiencia?</p>
       <div class="stars" id="rating">
         <span class="star" data-value="1">★</span>
         <span class="star" data-value="2">★</span>
