--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
       <div class="big-prizes-preview">
         <div class="prize-preview-item">
           <span class="prize-icon">🍽️</span>
-          <span class="prize-text">CENA GRATIS PARA 2</span>
+          <span class="prize-text" data-text="dinnerForTwo">CENA GRATIS PARA 2</span>
         </div>
         <div class="prize-preview-item">
           <span class="prize-icon">💰</span>
-          <span class="prize-text">50€ DESCUENTO</span>
+          <span class="prize-text" data-text="discount50">50€ DESCUENTO</span>
         </div>
         <div class="prize-preview-item">
           <span class="prize-icon">🍾</span>
-          <span class="prize-text">BOTELLA VINO</span>
+          <span class="prize-text" data-text="wineBottle">BOTELLA VINO</span>
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@
 
       <div id="valorarBtnContainer" class="show-immediately">
         <button class="confirmation-btn premium-btn" id="valorarBtn">
-          <span id="btnText">SÍ, QUIERO MI REGALO</span>
+          <span id="btnText" data-text="confirmRating">SÍ, QUIERO MI REGALO</span>
         </button>
         <!-- Confirmshaming para ratings bajos -->
         <button class="shame-btn hidden" id="shameBtn">
