--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="urgency-timer" id="urgencyTimer">
     <span class="timer-icon">⏰</span>
     <span class="timer-text">Oferta expira en: </span>
-    <span class="timer-countdown" id="countdown">03:00</span>
+    <span class="timer-countdown" id="countdown"></span>
   </div>
 
   <!-- Notificaciones de ganadores (fake social proof) -->
