--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <span data-text="prizesLeft">QUEDAN 3 PREMIOS GRANDES</span>
       </div>
       <div class="scarcity-item">
-        <span class="watching-number" id="watchingCount">87</span>
+        <span class="watching-number" id="watchingCount"></span>
         <span data-text="peopleWatching">personas viendo esta oferta</span>
       </div>
     </div>
@@ -114,7 +114,7 @@
         
         <!-- Indicador de premios reclamados hoy -->
         <div class="prizes-today">
-          <span class="prizes-number" id="prizesToday">137</span>
+          <span class="prizes-number" id="prizesToday"></span>
           <span data-text="prizesGivenToday">premios entregados HOY</span>
         </div>
 
