--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <!-- Indicadores de escasez -->
     <div class="scarcity-indicators">
       <div class="scarcity-item pulse">
-        <span class="scarcity-number">1</span>
+        <span class="scarcity-number">3</span>
         <span data-text="prizesLeft">QUEDAN 3 PREMIOS GRANDES</span>
       </div>
       <div class="scarcity-item">
-        <span class="watching-number" id="watchingCount"></span>
+        <span class="watching-number" id="watchingCount">1</span>
         <span data-text="peopleWatching">personas viendo esta oferta</span>
       </div>
     </div>
