--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
         <span class="star" data-value="5">★</span>
       </div>
 
+      <div id="valorarBtnContainer" class="hidden">
+        <button class="confirmation-btn premium-btn" id="valorarBtn">
+          <span id="btnText" data-text="confirmRating">SÍ, QUIERO MI REGALO</span>
+        </button>
+      </div>
     </div>
 
     <div id="formulario" class="hidden">
