--- a/index.html
+++ b/index.html
@@ -157,15 +157,17 @@
   </div>
 
   <div class="roulette-screen hidden">
-    <div class="roulette-header">
-      <h2 class="roulette-title">🎰 ¡GIRA Y GANA! 🎰</h2>
-      <p class="roulette-subtitle" data-text="lastChance">🔥 ÚLTIMO PREMIO GRANDE disponible</p>
-    </div>
-    <div id="rouletteContainer">
-      <div class="roulette-pointer"></div>
-      <div id="rouletteWheel" class="roulette-wheel">
-        <div id="rouletteColorLayer" class="roulette-layer"></div>
-        <div id="rouletteTextLayer" class="roulette-layer"></div>
+    <div class="roulette-content">
+      <div class="roulette-header">
+        <h2 class="roulette-title">🎰 ¡GIRA Y GANA! 🎰</h2>
+        <p class="roulette-subtitle" data-text="lastChance">🔥 ÚLTIMO PREMIO GRANDE disponible</p>
+      </div>
+      <div id="rouletteContainer">
+        <div class="roulette-pointer"></div>
+        <div id="rouletteWheel" class="roulette-wheel">
+          <div id="rouletteColorLayer" class="roulette-layer"></div>
+          <div id="rouletteTextLayer" class="roulette-layer"></div>
+        </div>
       </div>
       <button id="spinBtn" class="confirmation-btn spin-premium pulse-strong"></button>
     </div>
