--- a/index.html
+++ b/index.html
@@ -9,19 +9,8 @@
 </head>
 <body>
 <div class="main-wrapper">
-  <!-- Contador de urgencia SIEMPRE VISIBLE -->
-  <div class="urgency-timer" id="urgencyTimer">
-    <span class="timer-icon">⏰</span>
-    <span class="timer-text">Oferta expira en: </span>
-    <span class="timer-countdown" id="countdown"></span>
-  </div>
-
-  <!-- Notificaciones de ganadores (fake social proof) -->
-  <div class="winner-notifications" id="winnerNotifications"></div>
-
     <div class="restaurant-title">
       <h2>Restaurante Pizzería Euro</h2>
-      <div class="vip-badge" data-text="vipBadge">👑 ZONA VIP - PREMIOS EXCLUSIVOS 👑</div>
     </div>
   
   <div class="container">
@@ -56,7 +45,7 @@
 
     <!-- Indicadores de escasez -->
     <div class="scarcity-indicators">
-      <div class="scarcity-item pulse">
+      <div class="scarcity-item">
         <span class="scarcity-number">3</span>
         <span data-text="prizesLeft">QUEDAN 3 PREMIOS GRANDES</span>
       </div>
@@ -67,8 +56,8 @@
     </div>
 
     <div class="header">
-      <h1 class="pulse-title"><span data-text="title">¡FELICIDADES! Has sido SELECCIONADO</span></h1>
-      <p class="subtitle urgent-flash"><span data-text="subtitle">⚡ Tienes 3 MINUTOS para reclamar tu PREMIO EXCLUSIVO ⚡</span></p>
+      <h1><span data-text="title">¡FELICIDADES! Has sido SELECCIONADO</span></h1>
+      <p class="subtitle"><span data-text="subtitle">⚡ Tienes 3 MINUTOS para reclamar tu PREMIO EXCLUSIVO ⚡</span></p>
       
       <!-- Preview de premios grandes -->
       <div class="big-prizes-preview">
