--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="main-wrapper">
     <div class="restaurant-title">
-      <h2>Restaurante Pizzería Euro</h2>
+      <h2>Restaurante Pizzería EURO</h2>
     </div>
   
   <div class="container">
