--- a/index.html
+++ b/index.html
@@ -44,19 +44,37 @@
     </div>
 
     <div class="header">
-      <h1><span data-text="title">🎁 Valora y Gana un Premio Seguro 🎁</span></h1>
-      <p class="subtitle"><span data-text="subtitle">Deja tu reseña y gira la ruleta para ganar.</span></p>
-    </div>
-
-    <!-- Indicadores de escasez -->
-    <div class="scarcity-indicators">
-      <div class="scarcity-item">
-        <span class="scarcity-number">3</span>
-        <span data-text="prizesLeft">¡QUEDAN 3 PREMIOS GRANDES HOY!</span>
+      <h1><span data-text="title">🎁 Déjanos tu reseña y gana un premio seguro con nuestra ruleta de la suerte</span></h1>
+      
+      <!-- Indicadores de escasez -->
+      <div class="scarcity-indicators">
+        <div class="scarcity-item">
+          <span class="scarcity-number">3</span>
+          <span data-text="prizesLeft">¡QUEDAN 3 PREMIOS GRANDES HOY!</span>
+        </div>
+        <div class="scarcity-item">
+          <span class="watching-number" id="watchingCount">10</span>
+          <span data-text="peopleWatching">personas viendo esta oferta</span>
+        </div>
       </div>
-      <div class="scarcity-item">
-        <span class="watching-number" id="watchingCount">10</span>
-        <span data-text="peopleWatching">personas viendo esta oferta</span>
+
+      <!-- Preview de premios grandes -->
+      <div class="big-prizes-preview">
+        <div class="prize-preview-item">
+          <span class="prize-icon">🍽️</span>
+          <span class="prize-text" data-text="dinnerForTwo">CENA GRATIS PARA 2</span>
+        </div>
+        <div class="prize-preview-item">
+          <span class="prize-icon">💰</span>
+          <span class="prize-text" data-text="discount50">50€ DESCUENTO</span>
+        </div>
+        <div class="prize-preview-item">
+          <span class="prize-icon">🍾</span>
+          <span class="prize-text" data-text="wineBottle">BOTELLA VINO</span>
+        </div>
+      </div>
+      <div class="more-prizes-text">
+        <span data-text="morePrizes">🎁 + 5 premios más en la ruleta</span>
       </div>
     </div>
 
