--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
       </div>
     </div>
 
-    <div class="rating-section">
-      <p class="rating-instruction" data-text="ratingInstruction">¿Qué tal ha sido tu experiencia?</p>
-      <div class="stars" id="rating">
+    <div id="rating-view">
+      <div class="rating-section">
+        <p class="rating-instruction" data-text="ratingInstruction">¿Qué tal ha sido tu experiencia?</p>
+        <div class="stars" id="rating">
         <span class="star" data-value="1">★</span>
         <span class="star" data-value="2">★</span>
         <span class="star" data-value="3">★</span>
@@ -92,6 +93,7 @@
         <button class="confirmation-btn premium-btn" id="valorarBtn">
           <span id="btnText" data-text="confirmRating">SÍ, QUIERO MI REGALO</span>
         </button>
+      </div>
       </div>
     </div>
 
