--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
       </div>
     </div>
 
-    <div class="header">
-      <h1><span data-text="title">🎁 Déjanos tu reseña y gana un premio seguro con nuestra ruleta de la suerte</span></h1>
-      
-      <!-- Indicadores de escasez -->
+    <div id="initial-view">
+      <div class="header">
+        <h1><span data-text="title">🎁 Déjanos tu reseña y gana un premio seguro con nuestra ruleta de la suerte</span></h1>
+        
+        <!-- Indicadores de escasez -->
       <div class="scarcity-indicators">
         <div class="scarcity-item">
           <span class="scarcity-number">3</span>
@@ -93,6 +94,7 @@
           <span id="btnText" data-text="confirmRating">SÍ, QUIERO MI REGALO</span>
         </button>
       </div>
+    </div>
     </div>
 
     <div id="formulario" class="hidden">
