--- a/index.html
+++ b/index.html
@@ -101,12 +101,6 @@
       <div class="form-section premium-form">
         <h3 class="form-title-premium"><span data-text="improveQuestion">¿Dónde enviamos tu PREMIO? 🎁</span></h3>
         
-        <!-- Indicador de premios reclamados hoy -->
-        <div class="prizes-today">
-          <span class="prizes-number" id="prizesToday"></span>
-          <span data-text="prizesGivenToday">premios entregados HOY</span>
-        </div>
-
         <form id="feedbackForm">
           <div class="form-group">
             <input type="text" class="form-input premium-input" data-placeholder="namePlaceholder" required>
@@ -117,7 +111,7 @@
           <div class="form-group" id="feedback-group">
             <textarea class="form-input form-textarea" data-placeholder="feedbackPlaceholder" required></textarea>
           </div>
-          <button type="submit" class="submit-btn premium-submit pulse">
+          <button type="submit" class="submit-btn premium-submit">
             <span id="submitText"></span>
           </button>
         </form>
