--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
 
     <div id="codigoContainer" class="hidden">
       <div class="reward-code premium-reward">
-        <div class="code premium-code" id="codigoRecompensa"></div>
         <div class="description">
-          <span data-text="rewardCode">🎁 TU PREMIO VIP</span><br>
-          <small class="urgent-text"><span data-text="finishReview">⚠️ ACTÍVALO AHORA en Google o se PERDERÁ</span></small>
+          <span data-text="rewardCode">🎁 TU PREMIO</span>
         </div>
+        <div class="code premium-code" id="codigoRecompensa"></div>
         <div class="expiry-warning">
           <span data-text="todayOnly">⏰ VÁLIDO SOLO HOY</span>
         </div>
@@ -156,7 +155,7 @@
           <div id="rouletteTextLayer" class="roulette-layer"></div>
         </div>
       </div>
-      <button id="spinBtn" class="confirmation-btn spin-premium pulse-strong"></button>
+      <button id="spinBtn" class="confirmation-btn spin-premium pulse"></button>
     </div>
   </div>
 
