--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="form-section final-step">
         <h3 class="urgent-final"><span data-text="googleReviewTitle">⏰ ¡ÚLTIMO PASO! Activa tu premio en 30 segundos:</span></h3>
         <div class="google-timer" id="googleTimer">00:30</div>
-        <button class="google-btn premium-google pulse-strong" onclick="goToReview()">
+        <button class="google-btn premium-google pulse" onclick="goToReview()">
           <span class="google-icon">✅</span>
           <span data-text="googleBtn">ACTIVAR PREMIO EN GOOGLE</span>
         </button>
