--- a/index.html
+++ b/index.html
@@ -132,11 +132,10 @@
 
     <div id="resenaBtn" class="hidden">
       <div class="form-section final-step">
-        <h3 class="urgent-final"><span data-text="googleReviewTitle">⏰ ¡ÚLTIMO PASO! Activa tu premio en 30 segundos:</span></h3>
-        <div class="google-timer" id="googleTimer">00:30</div>
-        <button class="google-btn premium-google pulse" onclick="goToReview()">
-          <span class="google-icon">✅</span>
-          <span data-text="googleBtn">ACTIVAR PREMIO EN GOOGLE</span>
+        <h3 class="urgent-final"><span data-text="googleReviewTitle">¡Último paso! Completa tu reseña. Recibirás el código de tu premio por email automáticamente</span></h3>
+        <div class="google-timer" id="googleTimer">30:00</div>
+        <button class="google-btn premium-google" onclick="goToReview()">
+          <span data-text="googleBtn">COMPLETAR RESEÑA</span>
         </button>
       </div>
     </div>
