--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
     <div id="initial-view">
       <div class="header">
-        <h1><span data-text="title">🎁 Déjanos tu reseña y gana un premio seguro con nuestra ruleta de la suerte</span></h1>
+        <p><span data-text="title_part1"></span></p>
+        <p><span data-text="title_part2"></span></p>
         
         <!-- Indicadores de escasez -->
       <div class="scarcity-indicators">
@@ -60,6 +61,7 @@
       </div>
 
       <!-- Preview de premios grandes -->
+      <p class="prizes-subtitle"><span data-text="prizes_subtitle"></span></p>
       <div class="big-prizes-preview">
         <div class="prize-preview-item">
           <span class="prize-icon">🍽️</span>
