--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <span class="star" data-value="5">★</span>
       </div>
 
-      <div id="valorarBtnContainer" class="hidden">
+      <div id="valorarBtnContainer">
         <button class="confirmation-btn premium-btn" id="valorarBtn">
           <span id="btnText" data-text="confirmRating">SÍ, QUIERO MI REGALO</span>
         </button>
