--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         <span class="star" data-value="5">★</span>
       </div>
 
+      <div id="rating-error" class="rating-error hidden"></div>
+
       <div id="valorarBtnContainer">
         <button class="confirmation-btn premium-btn" id="valorarBtn">
           <span id="btnText" data-text="confirmRating">SÍ, QUIERO MI REGALO</span>
