--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
     <div class="roulette-content">
       <div class="roulette-header">
         <h2 class="roulette-title">🎰 ¡GIRA Y GANA! 🎰</h2>
-        <p class="roulette-subtitle" data-text="lastChance">🔥 ÚLTIMO PREMIO GRANDE disponible</p>
       </div>
       <div id="rouletteContainer">
         <div class="roulette-pointer"></div>
@@ -158,7 +157,7 @@
           <div id="rouletteTextLayer" class="roulette-layer"></div>
         </div>
       </div>
-      <button id="spinBtn" class="confirmation-btn spin-premium pulse"></button>
+      <button id="spinBtn" class="confirmation-btn spin-premium"></button>
     </div>
   </div>
 
