--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div class="roulette-screen hidden">
     <div class="roulette-content">
       <div class="roulette-header">
-        <h2 class="roulette-title">🎰 ¡GIRA Y GANA! 🎰</h2>
+        <h2 class="roulette-title">¿Cuál será tu premio?</h2>
       </div>
       <div id="rouletteContainer">
         <div class="roulette-pointer"></div>
