--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <div class="code premium-code" id="codigoRecompensa"></div>
         <div class="expiry-warning">
           <span data-text="todayOnly">⏰ VÁLIDO SOLO HOY</span>
+          <p id="currentDate" style="color: white; font-size: 0.9rem; margin-top: 5px;"></p>
         </div>
       </div>
     </div>
