--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <div id="formulario" class="hidden">
       <div class="form-section premium-form">
         <h3 class="form-title-premium"><span data-text="improveQuestion">¿Dónde enviamos tu PREMIO? 🎁</span></h3>
+        <p class="email-warning-text"><span data-text="emailWarning"></span></p>
         
         <form id="feedbackForm">
           <div class="form-group">
